# deck-of-cards-python

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs-deploy.yaml  main.yaml
docs/: index.md
requirements/: dev.txt
search/: search_index.json
src/card_games/: __init__.py  deck.py
src/card_games/games/: __init__.py  blackjack.py
src/card_games/games/blackjack/: blackjack.py
tests/: conftest.py  test_sanity.py
tests/test_deck/: test_sanity.py
tests/test_games/: test_blackjack.py
tests/test_games/test_blackjack/: test_blackjack.py  test_game.py
